compiler/testData/diagnostics/tests/samConversions/samConversionToGenericWrongNullability.diag.txt
/test.kt:52:29: error: return type of 'get' is not a subtype of the return type of the overridden member 'public abstract fun get(): String defined in java.util.function.Supplier'
        override fun get(): String? = foo()
                            ^^^^^^^
/test.kt:56:22: error: return type of 'get' is not a subtype of the return type of the overridden member 'public abstract fun get(): String defined in java.util.function.Supplier'
        override fun get() = foo()
                     ^^^

